@@ -1,5 +1,6 @@
 1.8.9 /
 [Alexandr Topilski]
+- redis-graph commands support
 
 1.8.8 / October 23, 2017
 [Alexandr Topilski]
